--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -233,13 +233,13 @@
                                                                     <constraint firstAttribute="width" constant="2" id="5EE-TH-IGg"/>
                                                                 </constraints>
                                                             </view>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Duels" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k79-sw-6ck">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duels" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k79-sw-6ck">
                                                                 <rect key="frame" x="81" y="10" width="39" height="20"/>
                                                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="17"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="38" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZn-ai-dFJ">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="38" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZn-ai-dFJ">
                                                                 <rect key="frame" x="82.5" y="35" width="35" height="35"/>
                                                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="30"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -266,13 +266,13 @@
                                                                     <constraint firstAttribute="width" constant="2" id="2Gb-ot-hci"/>
                                                                 </constraints>
                                                             </view>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ranking" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsH-Gc-gz3">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ranking" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsH-Gc-gz3">
                                                                 <rect key="frame" x="70" y="10" width="58.5" height="20"/>
                                                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="17"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="287" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uCo-S0-hMr">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="287" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uCo-S0-hMr">
                                                                 <rect key="frame" x="73" y="35" width="52.5" height="35"/>
                                                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="30"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -300,7 +300,7 @@
                                                                     <constraint firstAttribute="width" constant="2" id="XWy-tr-TXA"/>
                                                                 </constraints>
                                                             </view>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YNT-dR-eTH">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YNT-dR-eTH">
                                                                 <rect key="frame" x="74.5" y="10" width="52" height="20"/>
                                                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="17"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -648,7 +648,7 @@
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tif-gl-KWg">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tif-gl-KWg">
                                                         <rect key="frame" x="283" y="251" width="33" height="37"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="37" id="R9f-VE-VNy"/>
@@ -1102,16 +1102,26 @@
                                     <constraint firstItem="Rfc-WP-UKS" firstAttribute="centerX" secondItem="7WK-xM-Hjo" secondAttribute="centerX" id="xvJ-5J-enl"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VP2-py-lnF" userLabel="triggerButton">
+                                <rect key="frame" x="0.0" y="64" width="600" height="736"/>
+                                <connections>
+                                    <segue destination="j3s-YY-Zas" kind="showDetail" id="d4u-9G-a8Q"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="7WK-xM-Hjo" firstAttribute="leading" secondItem="y0G-hZ-zrA" secondAttribute="leading" id="726-a9-hge"/>
                             <constraint firstItem="7WK-xM-Hjo" firstAttribute="width" relation="lessThanOrEqual" secondItem="e5I-8H-w8R" secondAttribute="width" id="BkI-S3-nk8"/>
+                            <constraint firstAttribute="trailing" secondItem="VP2-py-lnF" secondAttribute="trailing" id="DdK-8Q-BRl"/>
                             <constraint firstItem="MXc-HX-Om2" firstAttribute="top" secondItem="y0G-hZ-zrA" secondAttribute="bottom" id="QJB-W9-L8a"/>
+                            <constraint firstItem="MXc-HX-Om2" firstAttribute="top" secondItem="VP2-py-lnF" secondAttribute="bottom" id="TyA-DK-EIm"/>
                             <constraint firstItem="7WK-xM-Hjo" firstAttribute="top" secondItem="y0G-hZ-zrA" secondAttribute="top" id="UpE-Ou-wzC"/>
                             <constraint firstItem="7WK-xM-Hjo" firstAttribute="trailing" secondItem="y0G-hZ-zrA" secondAttribute="trailing" id="XNI-la-tzY"/>
                             <constraint firstItem="y0G-hZ-zrA" firstAttribute="centerX" secondItem="e5I-8H-w8R" secondAttribute="centerX" id="Xjl-r3-9Qk"/>
+                            <constraint firstItem="VP2-py-lnF" firstAttribute="leading" secondItem="e5I-8H-w8R" secondAttribute="leading" id="fue-8U-ZlW"/>
                             <constraint firstItem="7WK-xM-Hjo" firstAttribute="bottom" secondItem="y0G-hZ-zrA" secondAttribute="bottom" id="l6x-nF-teH"/>
+                            <constraint firstItem="VP2-py-lnF" firstAttribute="top" secondItem="AeG-qz-4WR" secondAttribute="bottom" id="lDW-GU-BH0"/>
                             <constraint firstItem="y0G-hZ-zrA" firstAttribute="top" secondItem="AeG-qz-4WR" secondAttribute="bottom" id="n2v-Rd-dpt"/>
                         </constraints>
                     </view>
@@ -1131,6 +1141,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KhG-Eo-nYZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2132" y="41"/>
+        </scene>
+        <!--Action-->
+        <scene sceneID="ien-al-nY4">
+            <objects>
+                <viewController title="Action" id="j3s-YY-Zas" customClass="SensorViewController" customModule="Peng" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZMU-AK-r8W"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wyk-U7-Mm2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9UB-v5-wcL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1w2-W3-8PU" userLabel="countdown">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="o_3" translatesAutoresizingMaskIntoConstraints="NO" id="YBX-yz-epp">
+                                        <rect key="frame" x="37.5" y="250" width="525" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="YBX-yz-epp" secondAttribute="height" multiplier="525:100" id="tar-qd-5OY"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="YBX-yz-epp" firstAttribute="centerX" secondItem="1w2-W3-8PU" secondAttribute="centerX" id="ac0-oy-c2D"/>
+                                    <constraint firstItem="YBX-yz-epp" firstAttribute="centerY" secondItem="1w2-W3-8PU" secondAttribute="centerY" id="m9U-E7-owJ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1w2-W3-8PU" secondAttribute="trailing" id="6lK-vb-WhB"/>
+                            <constraint firstItem="1w2-W3-8PU" firstAttribute="leading" secondItem="9UB-v5-wcL" secondAttribute="leading" id="NMA-bO-FZD"/>
+                            <constraint firstAttribute="bottom" secondItem="1w2-W3-8PU" secondAttribute="bottom" id="ykL-i8-8fb"/>
+                            <constraint firstItem="1w2-W3-8PU" firstAttribute="top" secondItem="9UB-v5-wcL" secondAttribute="top" id="ykW-qt-fsB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="countdownLabel" destination="YBX-yz-epp" id="fpM-hk-bqo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="abs-KN-Ft3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2852" y="27"/>
         </scene>
         <!--New Duel-->
         <scene sceneID="0vg-nN-xTX">
@@ -1704,6 +1759,7 @@
         <image name="heart_red" width="160" height="152"/>
         <image name="how_to-dummy" width="596" height="1007"/>
         <image name="logo" width="796" height="796"/>
+        <image name="o_3" width="525" height="100"/>
         <image name="settings" width="22" height="22"/>
         <image name="shoot_loaded" width="35" height="82"/>
     </resources>
